# personal-assistant-agent

./: .env.example  .gitignore  AI.md  README.md  main.py  pyproject.toml  techREADME.md  wppconnect.config.example.json
scripts/: backfill_embeddings.py
src/: __init__.py  main.py  whatsapp_server.py
src/agent/: __init__.py  graph.py  state.py
src/core/: config.py  embeddings.py  llm.py
src/interfaces/: __init__.py
src/interfaces/whatsapp/: __init__.py  app.py  client.py
src/pairing/: store.py
src/tools/: __init__.py  notion_client.py  supabase_client.py
src/transport/: __init__.py  telegram_bot.py
src/utils/: notion_format.py  resource_models.py
supabase/: match_resources.sql
tests/: test_agent_helpers.py  test_embeddings_helpers.py  test_notion_format.py  test_pairing_store.py  test_resource_models.py  test_supabase_helpers.py
