[project]
name = "personal-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.13.0",
    "notion-client>=2.2.1",
    "pytest>=8.3.0",
]
